--- a/src/1597_LandingClient/index.html
+++ b/src/1597_LandingClient/index.html
@@ -16,8 +16,29 @@
       width: 100%;
       margin: 0 auto;
     }
+    #map {
+        margin: 0 auto;
+        width: 100%;
+        height: 500px;
+        border: 1px solid #ccc;
+    }
     .sr-only {
       display: none;
+    }
+    .marker-cluster {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #3498db;
+      color: #fff;
+      text-align: center;
+      font-size: 24px;
+    }
+    .leaflet-cluster-anim .leaflet-marker-icon, .leaflet-cluster-anim .leaflet-marker-shadow {
+      -webkit-transition: -webkit-transform 0.3s ease-out, opacity 0.3s ease-in;
+      -moz-transition: -moz-transform 0.3s ease-out, opacity 0.3s ease-in;
+      -o-transition: -o-transform 0.3s ease-out, opacity 0.3s ease-in;
+      transition: transform 0.3s ease-out, opacity 0.3s ease-in;
     }
   </style>
 
